# pheme-ai

./: README.md  pyproject.toml
src/: main.py
src/ai/: call_ollama.py
src/evaluator/: chan_eval.py
src/pheme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scraper/: chan_scraper.py
